--- a/src/main/resources/connection.properties
+++ b/src/main/resources/connection.properties
@@ -1,3 +1,7 @@
 unisystem.jdbc.url=${unisystem.jdbc.url}
 unisystem.user=${unisystem.user}
 unisystem.password=${unisystem.password}
+
+supervisorio.jdbc.url=${supervisorio.jdbc.url}
+supervisorio.user=${supervisorio.user}
+supervisorio.password=${supervisorio.password}
