--- a/src/main/resources/profile/config.unisystem.properties
+++ b/src/main/resources/profile/config.unisystem.properties
@@ -1,3 +1,7 @@
-unisystem.jdbc.url=jdbc:postgresql://localhost:5439/unisystemdb
+unisystem.jdbc.url=jdbc:postgresql://192.168.0.87:5439/unisystemdb
 unisystem.user=sistemas
 unisystem.password=Uni2023@!
+
+supervisorio.jdbc.url=jdbc:mysql://192.168.0.215:3306/supervisorio_teste?zeroDateTimeBehavior=convertToNull
+supervisorio.user=sistemas
+supervisorio.password=un1@Arauc@r1A
